<resources>
    <string name="app_name">WifiSearcher</string>
    <string name="title_activity_maps">Map</string>

    <string name="share">Share</string>
    <string name="navigation">Navigation</string>
    <string name="bssid">BSSID</string>
    <string name="rssi">Signal strength</string>
    <string name="encryption">Encryption mechanism</string>
    <string name="lock_state">Password lock state</string>
    <string name="key_type">Security</string>
    <string name="wifi_mac_address">MAC address: %1$s</string>
    <string name="wifi_key_type">Security: %1$s</string>
    <string name="wifi_encryption">Encryption mechanism: %1$s</string>
    <string name="wifi_card_list_title">Choose a network</string>
    <string name="wifi_sharing_text">I wanted to share with you this wifi : </string>
    <string name="wifi_position_descriptor">Position : </string>
</resources>
